--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "brace": "^0.11.1",
+    "codemirror": "^5.62.0",
+    "file-saver": "^2.0.5",
     "react": "^16.13.1",
     "react-ace": "^9.4.1",
     "react-dom": "^16.13.1",
