--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.13.1",
     "react-ace": "^9.4.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-switch": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
